Failure_Handling.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-retry
spec:
  hosts:
  - nginx-service
  http:
  - route:
    - destination:
        host: nginx-service
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
