Traffic_Splitting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-apache-traffic
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /nginx
    route:
    - destination:
        host: nginx-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /apache
    route:
    - destination:
        host: apache-service
        port:
          number: 80
